<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/close_session"
            android:icon="@drawable/ic_close"
            android:title="@string/menu_title_close_session"
            android:visible="false" />
        <item
            android:id="@+id/change_pincode"
            android:icon="@drawable/ic_security"
            android:title="@string/menu_title_change_pincode"
            android:visible="false" />
        <item
            android:id="@+id/open_source_components"
            android:icon="@drawable/ic_view_comfy"
            android:title="@string/menu_title_open_source_components" />
        <item
            android:id="@+id/about_app"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/menu_title_about" />

    </group>
</menu>