<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/mode_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/mode_description" />

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radio_sim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_sim" />

        <RadioButton
            android:id="@+id/radio_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mode_app" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/transferProgress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:max="100"
        android:progress="0" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:text="OK" />

</LinearLayout>